Update: app.py,change.html
モザイク処理のモザイクの大きさとファイル名をchange.html内で表示できるようにした。

--- a/templates/change.html
+++ b/templates/change.html
@@ -30,7 +30,7 @@
 
 
             <div class="file-info">
-                <p>ファイル名.png</p>
+                <p>{{ img_name }}</p>
                 <span class="tag">Tag</span>
                 <label for="transform-method">変換方法を選択</label>
 
