Return & Add: html
前回のpull requestでhtmlを変更しましたがいろいろ間違っていたので戻すところは戻し、加えるところは加えた。

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,21 +8,36 @@
 </head>
 <body>
     <header>
-        <div class="logo">⌘</div>
-        <nav>
-            <a>conversion</a>
-            <button class="button">Sign in</button>
-            <button class="button">Register</button>
+        <nav class="header">
+            <a href = "/">
+                <div class="logo">📷</div>
+            </a>
+            <div class="sign">
+                <a >conversion</a>
+                <button class="button">Sign in</button>
+                <button class="button">Register</button>
+            </div>
         </nav>
     </header>
     <main>
-    <h1>画像を変換する</h1>
-    <form action="/upload" method="post" enctype="multipart/form-data">
-        <label for="file">画像を選択:</label>
-        <input type="file" id="file" name="file" accept="image/*">
-        <button type="submit">submit</button>
-    </form>
-    <p>以下に説明かく</p>
+        <div class="container">
+            <h1> 画像を変換する</h1>
+            <form action="/upload" method="post" enctype="multipart/form-data">
+                <input type="file" name="file" id="file" accept="image/*">
+                <br>
+                <br>
+                <button type="submit" name="submit">画像を変換</button>
+            </form>
+
+        </div>
+
+        <div class="manual">
+            <h2> 使い方 </h2>
+            <p> 1. 画像を選択してください</p>
+            <p> 2. 画像を変換ボタンを押してください</p>
+            <p> 3. 画像の変換方法を選択してください</p>
+            <p> 4. 画像が変換されます</p>
+        </div>
     </main>
 </body>
 </html>
