--- a/templates/change.html
+++ b/templates/change.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <header>
-        <div class="logo">⌘</div>
-        <nav>
-            <a >conversion</a>
-            <button class="button">Sign in</button>
-            <button class="button">Register</button>
+        <nav class="header">
+            <a href = "/">
+                <div class="logo">📷</div>
+            </a>
+            <div class="sign">
+                <button class="button">Sign in</button>
+                <button class="button">Register</button>
+            </div>
         </nav>
     </header>
 
