--- a/templates/change.html
+++ b/templates/change.html
@@ -53,6 +53,8 @@
                     <option value="2">モザイク処理</option>
                     <option value="3">ガウシアンフィルタ</option>
                     <option value="4">二値化処理</option>
+                    <option value="5">エッジ処理</option>
+                    <option value="6">色彩処理</option>
                 </select>
                 <button>変換</button>
                 </form>
