--- a/templates/change.html
+++ b/templates/change.html
@@ -55,6 +55,7 @@
                     <option value="4">二値化処理</option>
                     <option value="5">エッジ処理</option>
                     <option value="6">色彩処理</option>
+                    <option value="7">左右反転処理</option>
                 </select>
                 <button>変換</button>
                 </form>
