--- a/templates/change.html
+++ b/templates/change.html
@@ -14,11 +14,8 @@
                 <div class="logo">📷</div>
             </a>
             <div class="sign">
-                <a href="/login">
-                    <button class="button">Sign in</button>
-                </a>
-                <a href="register">
-                    <button class="button">Register</button>
+                <a href="/logout">
+                    <button class="button">Logout</button>
                 </a>
             </div>
         </nav>
