Registerのパス変更

--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>新規登録</h1>
-    <form action="/register" method="POST">
+    <form action="{{ url_for('login.register') }}" method="POST">
         <label for="username">ユーザー名:</label>
         <input type="text" id="username" name="username" required>
         <br>
@@ -15,6 +15,6 @@
         <br>
         <button type="submit">登録</button>
     </form>
-    <p>既にアカウントをお持ちの方は<a href="/login">こちら</a></p>
+    <p>既にアカウントをお持ちの方は<a href="{{ url_for('login.login') }}">こちら</a></p>
 </body>
 </html>
