add: kitta's cord
吉太くんの実装した画像変換を追加

--- a/templates/change.html
+++ b/templates/change.html
@@ -63,6 +63,8 @@
                         <option value="7">左右反転処理</option>
                         <option value="8">スタンプ処理</option>
                         <option value="9">クレヨン</option>
+                        <option value="10">ノイズ処理</option>
+                        <option value="11">ヒートマップ</option>
                     </select>
                     <!-- モザイク強度入力 -->
 
