--- a/templates/register.html
+++ b/templates/register.html
@@ -18,7 +18,7 @@
         <br>
         <button type="submit" class="login-button">登録</button>
     </form>
-    <p>既にアカウントをお持ちの方は<a href="/login">こちら</a></p>
+    <p>既にアカウントをお持ちの方は<a href="{{ url_for('index') }}">こちら</a></p>
 </div>
 </body>
 </html>
