--- a/templates/login.html
+++ b/templates/login.html
@@ -20,8 +20,7 @@
         <br>
         <button type="submit" class="login-button">ログイン</button>
     </form>
-
-    <p>新規登録は<a href="{{ url_for('login.register') }}">こちら</a></p>
+    <p>新規登録は<a href="{{ url_for('register') }}">こちら</a></p>
     </div>
 </body>
 </html>
