--- a/templates/change.html
+++ b/templates/change.html
@@ -14,7 +14,7 @@
         <nav class="header">
             <a href="{{ url_for('login.index', user_name = user_name) }}">
 
-                <div class="logo">📷</div>
+                <div class="logo">画像変換アプリ</div>
             </a>
             <div class="sign">
                 <a href="{{ url_for('login.logout') }}">
