--- a/templates/login.html
+++ b/templates/login.html
@@ -9,18 +9,16 @@
 <body class="center">
     <div class="handwriting-border">
     <h1>ログイン</h1>
-
     <form action="{{ url_for('login.login') }}" method="POST">
         <label for="username" class="label-large" >ユーザー名:</label>
         <input class="input-button" type="text" id="username" name="username" required>
-
         <br>
         <label for="password" class="label-large">パスワード:</label>
         <input class="input-button form-group" type="password" id="password" name="password" required>
         <br>
         <button type="submit" class="login-button">ログイン</button>
     </form>
-    <p>新規登録は<a href="{{ url_for('register') }}">こちら</a></p>
+    <p>新規登録は<a href="{{ url_for('login.register') }}">こちら</a></p>
     </div>
 </body>
 </html>
