--- a/templates/user_manage.html
+++ b/templates/user_manage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <section class>
+    <section>
         <h1>ユーザー管理</h1>
         <table>
             <tr>
