--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>画像変換アプリ</title>
+    <title>画像編集名人</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <header>
         <nav class="header">
             <a href="{{ url_for('login.index', user_name=user_name) }}">
-                <div class="logo">画像変換アプリ</div>
+                <div class="logo">画像編集名人</div>
             </a>
             <div class="sign">
                 <a href="{{ url_for('login.logout') }}">
